# bad_rustc_messages_for_diesel

./: Cargo.toml
src/: bad_generics_1.rs  bad_insertable.rs  bad_insertable_pyramide_of_doom.rs  bad_queryable_1.rs  bad_queryable_by_name_1.rs  error_message_points_to_private_types.rs  main.rs  missing_method.rs  to_large_table.rs
